--- a/src/scss/_sliderImage.scss
+++ b/src/scss/_sliderImage.scss
@@ -1,6 +1,5 @@
 .VueCarousel {
 	.VueCarousel-wrapper {
-	    // padding: 50px 0;
 	    padding-top: 50px;
 	    padding-top: 0;
 	}
@@ -19,21 +18,5 @@
 /*Mobile styles*/
 
 @media only screen and (min-device-width : 320px) and (max-width : 640px) {
-
-//   input{
-//     width: 60%;
-//     height:100px;
-//     border: 1px solid #333;
-//   }
-
-//   .no-results  {
-//     font-size: 2.0em;
-//   }
-
-//   .headline {
-//     font-size: 3.0rem;
-//   }
-
-// select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] { font-size: 16px; }
-
+	// mobile portrait styles
 }
